add AddressSpace ConformanceUnits (no details)
Signed-off-by: Martin Homuth <martin@martinhomuth.de>

--- a/doc/profiles.org
+++ b/doc/profiles.org
@@ -6,6 +6,41 @@
 ** Address Space Model
    Defines ConformanceUnits for various features of the OPC UA
    AddressSpace.
+
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Category | Title                                   | Description                                                                                                                                                                                                                                                              | Location | Status |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Base                      | Support the NodeClasses with their Attributes and References as defined in Part 3. This includes for instance: Object, ObjectType, Variable, VariableType, References and DataType                                                                                       |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Events                    | Support OPC UA AddressSpace elements for generating Event notifications. This includes at least one Node with an EventNotifier Attribute set to True (Server Node).                                                                                                      |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Complex DataTypes         | Support StructuredDataTypes with a Data Directory                                                                                                                                                                                                                        |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Method                    | Support Method Nodes                                                                                                                                                                                                                                                     |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Notifier Hierarchy        | Supports using the HasNotifier reference to build a hierarchy of Object Nodes that are notifiers with other notifier Object Nodes.                                                                                                                                       |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space Source Hierarchy          | Supports hierarchies of event sources where each hierarchy roots in an Object Node that is a notifier. The HasEventSource Reference is used to relate the Nodes within a hierarchy. If Conditions are supported, the hierarchy shall include HasCondition References.    |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space WriteMask                 | Supports WriteMask indicating the write access availability for all attributes, including not supported attributes.                                                                                                                                                      |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space UserWriteMask             | Supports UserWriteMask indicating the write access availability for all attributes for the given user, including not supported attributes. Support includes at least two levels of users.                                                                                |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space UserWriteMask Multilevel  | Supports UserWriteMask indicating the write access availability for all attributes for the given user, including not supported attributes. This includes supporting multiple levels of access control for all nodes in the system.                                       |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space User Access Level Full    | Implements User Access Level security, this includes supporting multiple levels of access control for Variable nodes in the system. This includes an indication of read, write, Historical read and Historical write access to the Value Attribute.                      |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Server   | Address Space User Access Level Base    | Implements User Access Level Security for Variable nodes, this includes at least two users in the system. This includes an indication of read, write, historical read and Historical write access to the value attribute                                                 |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Client   | Address Space Client Base               | Uses and understands the NodeClasses with their Attributes and behaviour as defined in Part 3. This includes for instance: Object, ObjectType, Variable, VariableType, References and DataType. This includes treating BrowseNames and String NodeIds as case sensitive. |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Client   | Address Space Client Complex DataType   | Uses and understands arbitrary StructuredDataTypes via Data Dictionary.                                                                                                                                                                                                  |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Client   | Address Space Client Notifier Hierarchy | Uses hierarchy of Object Nodes that are notifiers to detect specific areas where the Client can subscribe for Events.                                                                                                                                                    |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+   | Client   | Address Space Client Source Hierarchy   | Detect and use the hierarchy of event sources exposed for specific Object Nodes that are event notifiers.                                                                                                                                                                |          |        |
+   |----------+-----------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------|
+
 ** Aggregates
    All ConformanceUnits that are related to Aggregates, including
    individual ConformanceUnits for each supported Aggregate as
